fixed odd white background behind select boxes in sorting

--- a/src/components/PropertySorting/property-sorting.module.scss
+++ b/src/components/PropertySorting/property-sorting.module.scss
@@ -19,8 +19,9 @@
   }
   
   .sorting-description, select{
-    padding: 5px 10px;
+    padding: 0px 10px;
     width:100%;
+    line-height:25px;
   }
 
   .sorting-description{
